# docs/swagger.yaml
@@ -172,6 +172,13 @@ definitions:
         description: Время последнего обновления записи.
         type: string
     type: object
+  models.SignInInput:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
   models.Supplier:
     properties:
       contact_info:
@@ -277,7 +284,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/models.SwagUser'
+          $ref: '#/definitions/models.SignInInput'
       produces:
       - application/json
       responses:
@@ -317,6 +324,8 @@ paths:
           description: Server error
           schema:
             $ref: '#/definitions/controllers.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: GetAllUsers
       tags:
       - users
